--- a/TODOListClient/App.xaml
+++ b/TODOListClient/App.xaml
@@ -3,6 +3,10 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <!-- Здесь можно добавить ресурсы -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/GlobalStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
